@@ -1,5 +1,7 @@
 19/10/13 started 7.37.0
-- redone im_rotate_*mask45(), im_gauss_*mask*(), im_log_*mask*() as classes
+- redone im_rotate_*mask45(), im_gauss_*mask*(), im_log_*mask() as classes
+- vips_init() now does some ABI compat checking, though this change requires
+  an ABI break
 
 18/10/13	started 7.36.3
 - fix compiler warnings in ubuntu 13.10
